--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <body style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">
         <a href="aboutme.html">About Me</a>
-        <h1 style="color: blue;">Save the Bees!</h1>
+        <h1 style="color: red;">Save the Bees!</h1>
         <p style="font-style: italic;">We want to save the bees!</p>
         <div id="saveit">
             <input id="savewhat" placeholder="Type in your cause..." type="text">
