updated to lesson 2

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,8 +1,37 @@
-<html>
-    <body style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">
-        <a href="index.html">Home</a>
-        <h1 style="color: teal;">About Me</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>Bzzz</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+
+<body>
+    <header>
+        <h1>About Me</h1>
+    </header>
+    <nav>
+        <a href="index.html">HOME</a> |
+        <a href="aboutme.html">ABOUT ME</a> |
+        <a href="">FORM</a> |
+        <a href="">PETITION</a>
+    </nav>
+    <section>
         <p style="font-style: italic;">I love to teach!</p>
-        <img style="width: 350px;" src="me.jpg">
-    </body>
+        <img class="me" src="./img/me.jpg">
+    </section>
+    <section>
+        <h2>More about me</h2>
+        <ul class="self-info">
+            <li>I was born in London England</li>
+            <li>I cycle everywhere</li>
+            <li>I hunt for mushrooms</li>
+        </ul>
+    </section>
+    <footer>
+        <p class="creator">Created by: Ben</p>
+    </footer>
+
+</body>
+
 </html>
